--- a/config_default.yaml
+++ b/config_default.yaml
@@ -1,6 +1,4 @@
-#
-# This file is UTF-8 encoded.
-#
+# encoding: utf-8
 script_name: my_script
 project_name: "My Python Project"
 author_name: "John Doe"
