--- a/project_types/default/config.yaml
+++ b/project_types/default/config.yaml
@@ -4,13 +4,13 @@ context:
   script_name: my_script
   project_name: "My Python Project"
   author_name: "John Doe"
-path_actions:
-  name: "."
+path_config:
   rename: project
   contents:
-    - name: my_script
+    my_script:
       rename: "{{{script_name}}}"
-    - name: pylib
+      executable: True
+    pylib:
       rename: "pylib_{{{script_name}}}"
       contents:
 
