--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "submodules/groom"]
-	path = submodules/groom
+[submodule "sub/groom"]
+	path = sub/groom
 	url = git://github.com/cjerdonek/groom.git
