--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "sub/groom"]
 	path = sub/groom
-	url = git://github.com/cjerdonek/groom.git
+	url = git://github.com/cjerdonek/groome.git
