Add tox run without source directory.

--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@
 #   http://pypi.python.org/pypi/tox
 #
 [tox]
-envlist = py27
+envlist = py27, py27-no-source
 
 [testenv]
 # Change the working directory so that we import the package from the
@@ -12,3 +12,13 @@ changedir =
     {envbindir}
 commands =
     molt --run-tests --dev-source-dir {toxinidir}
+
+# Check that things works without passing a source directory, which will
+# be the default for end-users running Molt from an install..
+[testenv:py27-no-source]
+basepython =
+    python2.7
+changedir =
+    {envbindir}
+commands =
+    molt --run-tests
