Add a tox environment to test setuptools instead of distribute.

--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@
 #   http://pypi.python.org/pypi/tox
 #
 [tox]
-envlist = py27, py27-no-source
+envlist = py27, py27-no-source, py27-no-distribute
 
 [testenv]
 # Change the working directory so that we import the package from the
@@ -22,3 +22,13 @@ changedir =
     {envbindir}
 commands =
     molt --run-tests
+
+# Check that things work with setuptools instead of the default distribute
+# in the virtual environment.
+[testenv:py27-no-distribute]
+changedir =
+    {envbindir}
+commands =
+    molt --run-tests --dev-source-dir {toxinidir}
+distribute =
+    False
