Add support for PyPy.

--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,11 @@
 #   http://pypi.python.org/pypi/tox
 #
 [tox]
-envlist = py27, py27-no-source, py27-no-distribute
+envlist =
+    py27,
+    py27-no-source,
+    py27-no-distribute,
+    pypy
 
 [testenv]
 # Change the working directory so that we import the package from the
